Manual edits to index.html

--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
             <!-- Navigation menu for switching views -->
             <nav>
                 <ul class="nav-menu">
-                    <li><a href="#" class="nav-link active" data-view="dashboard">📊 Dashboard</a></li> <!-- Link to dashboard view -->
+                    <li><a href="#" class="nav-link active" data-view="dashboard">📊 Dashboards</a></li> <!-- Link to dashboard view -->
                     <li><a href="#" class="nav-link" data-view="equipment">🔧 Equipment</a></li> <!-- Link to equipment view -->
                     <li><a href="#" class="nav-link" data-view="maintenance">🛠️ Maintenance</a></li> <!-- Link to maintenance view -->
                     <li><a href="#" class="nav-link" data-view="reports">📋 Reports</a></li> <!-- Link to reports view -->
